WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155541
Don't invalidate style unnecessarily when setting inline style cssText
https://bugs.webkit.org/show_bug.cgi?id=155541
Summary
Don't invalidate style unnecessarily when setting inline style cssText
Antti Koivisto
Reported
2016-03-16 07:10:49 PDT
We should check if something actually changes.
Attachments
patch
(8.75 KB, patch)
2016-03-16 07:55 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-03-16 07:11:18 PDT
rdar://problem/23318893
Antti Koivisto
Comment 2
2016-03-16 07:55:03 PDT
Created
attachment 274189
[details]
patch
Simon Fraser (smfr)
Comment 3
2016-03-16 08:44:53 PDT
Comment on
attachment 274189
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=274189&action=review
> Source/WebCore/css/StyleProperties.cpp:859 > + return oldProperties != m_propertyVector;
Are they always sorted the same way? If not, this is conservative check, but maybe add a comment to mention that.
Antti Koivisto
Comment 4
2016-03-16 09:41:38 PDT
> Are they always sorted the same way? If not, this is conservative check, but > maybe add a comment to mention that.
No they are not. Added a comment.
Antti Koivisto
Comment 5
2016-03-16 09:46:32 PDT
https://trac.webkit.org/r198284
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug