Don't invalidate style unnecessarily when setting inline style cssText https://bugs.webkit.org/show_bug.cgi?id=155541 rdar://problem/23318893

Reviewed by Simon Fraser.

Source/WebCore:

We currently invalidate style when cssText is set whether the style declaration changed or not.

Based on a patch by Simon.

Test: fast/css/style-invalidation-inline-csstext.html

* css/PropertySetCSSStyleDeclaration.cpp:
(WebCore::PropertySetCSSStyleDeclaration::cssText):
(WebCore::PropertySetCSSStyleDeclaration::setCssText):

    Invalidate only if the parsed style changed.

* css/StyleProperties.cpp:
(WebCore::MutableStyleProperties::parseDeclaration):

    Compare the original and new style after parsing, return result.

* css/StyleProperties.h:

LayoutTests:

* fast/css/style-invalidation-inline-csstext-expected.txt: Added.
* fast/css/style-invalidation-inline-csstext.html: Added.



Canonical link: https://commits.webkit.org/173663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198284 268f45cc-cd09-0410-ab3c-d52691b4dbfc